# RegexInference

./: .gitattributes  .gitignore  .gitmodules  Paresy_S.ipynb  README.md
Benchmarks/: 04.03.TLT.2.1.0_Train.txt  04.03.TLT.2.1.0_Train_F128.txt  benchmarks.csv  benchmarks_results.csv  exp_gen.py
Benchmarks-Results/: dc_results.csv  examples_results.csv
Benchmarks/dc/: dc_exp1.txt  dc_exp10.txt  dc_exp11.txt  dc_exp12.txt  dc_exp13.txt  dc_exp14.txt  dc_exp15.txt  dc_exp16.txt  dc_exp17.txt  dc_exp18.txt  dc_exp19.txt  dc_exp2.txt  dc_exp20.txt  dc_exp21.txt  dc_exp22.txt  dc_exp23.txt  dc_exp24.txt  dc_exp25.txt  dc_exp26.txt  dc_exp27.txt  dc_exp28.txt  dc_exp29.txt  dc_exp3.txt  dc_exp30.txt  dc_exp4.txt  dc_exp5.txt  dc_exp6.txt  dc_exp7.txt  dc_exp8.txt  dc_exp9.txt
Benchmarks/type1/: type1_exp1.txt  type1_exp10.txt  type1_exp100.txt  type1_exp101.txt  type1_exp102.txt  type1_exp103.txt  type1_exp104.txt  type1_exp105.txt  type1_exp106.txt  type1_exp107.txt  type1_exp108.txt  type1_exp109.txt  type1_exp11.txt  type1_exp110.txt  type1_exp111.txt  type1_exp112.txt  type1_exp113.txt  type1_exp114.txt  type1_exp115.txt  type1_exp116.txt  type1_exp117.txt  type1_exp118.txt  type1_exp119.txt  type1_exp12.txt  type1_exp120.txt  type1_exp121.txt  type1_exp122.txt  type1_exp123.txt  type1_exp124.txt  type1_exp125.txt  type1_exp126.txt  type1_exp127.txt  type1_exp128.txt  type1_exp129.txt  type1_exp13.txt  type1_exp130.txt  type1_exp131.txt  type1_exp132.txt  type1_exp133.txt  type1_exp134.txt  (+102 more)
Benchmarks/type2/: type2_exp1.txt  type2_exp10.txt  type2_exp100.txt  type2_exp101.txt  type2_exp102.txt  type2_exp103.txt  type2_exp104.txt  type2_exp105.txt  type2_exp106.txt  type2_exp107.txt  type2_exp108.txt  type2_exp109.txt  type2_exp11.txt  type2_exp110.txt  type2_exp111.txt  type2_exp112.txt  type2_exp113.txt  type2_exp114.txt  type2_exp115.txt  type2_exp116.txt  type2_exp117.txt  type2_exp118.txt  type2_exp119.txt  type2_exp12.txt  type2_exp120.txt  type2_exp121.txt  type2_exp122.txt  type2_exp123.txt  type2_exp124.txt  type2_exp125.txt  type2_exp126.txt  type2_exp127.txt  type2_exp128.txt  type2_exp129.txt  type2_exp13.txt  type2_exp130.txt  type2_exp131.txt  type2_exp132.txt  type2_exp133.txt  type2_exp134.txt  (+286 more)
Paresy-Original-Profile/profile-rtx2060-6gb-laptop/: Paresy.ncu-proj  README.md  report1.nsys-rep-Merged-20250604-084433.etl  report1.nsys-rep-Merged-20250604-100505.etl  type1_exp1.ncu-rep  type1_exp199.ncu-rep  type1_exp199.nsys-rep  type1_exp50.nsys-rep
Paresy-Original-Profile/profile-rtx2060-6gb-laptop/Nsight Compute/: Paresy.ncu-proj  type1_exp50_Concat.ncu-rep  type1_exp50_Or.ncu-rep  type1_exp50_Question.ncu-rep  type1_exp50_Star.ncu-rep
Paresy-Original-Profile/profile-rtx2060-6gb-laptop/Nsight Systems/: Paresy.qdproj  type1_exp50.nsys-rep  type2_exp83.nsys-rep
Paresy-S/: CMakeLists.txt
Paresy-S-CPU/: CMakeLists.txt  dc_paresy.cpp  dc_paresy.hpp  main.cpp  regex_match.hpp  rei.cpp  rei_util.hpp
Paresy-S-GPU/: CMakeLists.txt
Paresy-S-GPU/include/: bitmask.h  regex_match.hpp  rei.h  rei_dc.hpp  rei_util.hpp
Paresy-S-GPU/src/: main.cu  regex_match.cpp  rei.cu  rei_dc.cpp  rei_util.cpp
Paresy-S/include/: interval_splitter.h  rei_dc.hpp  rei_util.hpp
Paresy-S/src/: main.cu  regex_match.cpp  rei.cu  rei_dc.cpp  rei_util.cpp
ParesyDC-CPU/: CMakeLists.txt  bitmask128.hpp  dc_paresy.cpp  dc_paresy.hpp  dc_rei.hpp  main.cpp  regex_match.cpp  regex_match.hpp  rei.cpp  rei.hpp  rei_util.cpp  rei_util.hpp
ParesyDC-GPU/: CMakeLists.txt  bitmask.h  dc_paresy.cpp  dc_paresy.hpp  main.cu  pair.h  regex_match.cpp  regex_match.hpp  rei.cu  rei.h
scripts/: gen_dc.py  requirements.txt
